# myna

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: get_attr.py
myna/: apdu.py  api.py  reader.py  text.py  utils.py  validate.py
