[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myna"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
author = "Yuichiro Aoki"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/yuichiroaoki/myna"
"Bug Tracker" = "https://github.com/yuichiroaoki/myna/issues"